# qml-essentials

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  README.md  ansaetze.ipynb  asd.py  check.ipynb  coefficients.ipynb  diagrams.drawio  index.html  logo.drawio  metrics.ipynb  mkdocs.yml  mp_experiment.py  objects.inv  pyproject.toml  run_mp_experiments.sh  sitemap.xml  tikz_test.tex  training.ipynb  update.sh  usage.ipynb
.github/: dependabot.yml
.github/workflows/: dependabot-approve.yml  docs-publish.yml  docs.yml  mkdocs.yml  publish.yml  python-app.yml  qa.yml  quality-publish.yml  quality.yml  test-on-pr.yml  test-on-publish.yml  test-on-review.yml  test.yml  testing.yml
ansaetze/: index.html
coefficients/: index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_1d465d0ab76e57e7___init___py.html  z_1d465d0ab76e57e7_ansaetze_py.html  z_1d465d0ab76e57e7_coefficients_py.html  z_1d465d0ab76e57e7_drawing_py.html  z_1d465d0ab76e57e7_entanglement_py.html  z_1d465d0ab76e57e7_expressibility_py.html  z_1d465d0ab76e57e7_gates_py.html  z_1d465d0ab76e57e7_math_py.html  z_1d465d0ab76e57e7_model_py.html  z_1d465d0ab76e57e7_operations_py.html  z_1d465d0ab76e57e7_pulses_py.html  z_1d465d0ab76e57e7_qoc_py.html  z_1d465d0ab76e57e7_tape_py.html  z_1d465d0ab76e57e7_topologies_py.html  z_1d465d0ab76e57e7_unitary_py.html  z_1d465d0ab76e57e7_utils_py.html  z_1d465d0ab76e57e7_yaqsi_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_coefficients_py.html  z_a44f0ac069e85531_test_entanglement_py.html  z_a44f0ac069e85531_test_expressiblity_py.html  z_a44f0ac069e85531_test_model_py.html
docs/: .$logo.drawio.bkp  ansaetze.ipynb  ansaetze.md  benchmarks.py  coefficients.ipynb  coefficients.md  diagrams.drawio  entanglement.md  expressibility.md  generate_circuits.py  index.md  jaqsi.ipynb  jaqsi.md  magic.md  math_utils.md  metrics.ipynb  mp_experiment.py  mp_results_density.json  mp_results_expval.json  multiprocessing_test.py  noise.md  pulses.ipynb  pulses.md  random_sampling.md  reference.md  references.md  results.json  run_mp_experiments.sh  setup.md  slurm_benchmark.sh  trainable_frequencies.ipynb  training.ipynb  training.md  usage.ipynb  usage.md  yaqsi.ipynb  yaqsi.md
docs/figures/: invert_images.sh
entanglement/: index.html
expressibility/: index.html
noise/: index.html
pulses/: index.html
qml_essentials/: __init__.py  algebra.py  ansaetze.py  check.py  coefficients.py  drawing.py  entanglement.py  evolution.py  expessibility.py  expressibility.py  gates.py  jaqsi.py  magic.py  math.py  memory.py  mnwe.py  model.py  operations.py  pauli.py  pulses.py  qoc.py  qoc_copy.py  qoc_logs.csv  qoc_results.csv  qoc_results_drag.csv  qoc_results_gaussian.csv  qoc_results_square.csv  random_sampling.py  script.py  simulation.py  simulator.py  states.py  tape.py  test_pulses.py  topologies.py  unitary.py  utils.py  yaqsi.py
qml_essentials/entanglement/: __init__.py  measures.py  test.py  utils.py
references/: index.html
search/: search_index.json
setup/: index.html
tensorboard/qoc/: events.out.tfevents.1751312282.MacBook-Air-de-Lucas.local.53405.0
tests/: conftest.py  test_algebra.py  test_ansaetze.py  test_coefficients.py  test_entanglement.py  test_expressiblity.py  test_jaqsi.py  test_magic.py  test_math.py  test_model.py  test_pauli.py  test_pulse_state.py  test_pulses.py  test_qoc.py  test_random_sampling.py  test_states.py  test_yaqsi.py
training/: index.html
usage/: index.html
yaqsi/: index.html
