[project]
name = "qml-essentials"
version = "0.1.38"
description = "A toolbox to make working with QML models easier."
authors = [
    { name = "Melvin Strobl", email = "melvin.strobl@kit.edu" },
    { name = "Maja Franz", email = "maja.franz@oth-regensburg.de" },
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Melvin Strobl", email = "melvin.strobl@kit.edu" }]
keywords = [
    "quantum",
    "quantum machine learning",
    "qml",
]   
dependencies = [
    "pennylane",
    "jax==0.7.1",
    "jaxlib==0.7.1",
    "optax<=0.2.5",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://cirkiters.github.io/qml-essentials/"
Repository = "https://github.com/cirKITers/qml-essentials"
Documentation = "https://cirkiters.github.io/qml-essentials/"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "coverage>=7.13.1",
    "flake8>=7.3.0",
    "licensecheck>=2025.1.0",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pytest-xdist>=3.8.0",
]
docs = [
    "ipykernel>=6.31.0",
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.licensecheck]
fail_packages = ["typing_extensions"]

[tool.pytest.ini_options]
markers = [
    "expensive: Tests that take a long time to run",
    "unittest: Tests with an assertion to check the output of a particular unit",
    "smoketest: Tests that just run a method and check if it not fails",
]

[tool.uv.sources]
pennylane = { git = "https://github.com/PennyLaneAI/pennylane", rev = "master" }
